--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,16 +1,17 @@
-.header{
-    background: #0303d4;
-    color: white;
+.header {
+  background: #0303d4;
+  color: white;
 }
 
 table {
-    border: 1px solid black;
-    border-collapse: collapse;
-    font-size: 18px;
-    font-weight: normal;
+  border: 1px solid black;
+  border-collapse: collapse;
+  font-size: 18px;
+  font-weight: normal;
 }
 
-td, th {
-    border: 1px solid black;
-    padding: 5px;
+td,
+th {
+  border: 1px solid black;
+  padding: 5px;
 }
